--- a/code-server/lib/vscode/package.json
+++ b/code-server/lib/vscode/package.json
@@ -89,7 +89,7 @@
     "@xterm/addon-unicode11": "0.9.0-beta.51",
     "@xterm/addon-webgl": "0.19.0-beta.51",
     "@xterm/headless": "5.6.0-beta.51",
-    "@xterm/xterm": "5.6.0-beta.51",
+    "@xterm/xterm": "5.5.0",
     "http-proxy-agent": "^7.0.0",
     "https-proxy-agent": "^7.0.2",
     "jschardet": "3.1.3",
